# lhco-tools

./: .gitignore  .projectile  LICENSE  README.md  lhco-tools.cabal  shell.nix  stack.yaml
src/HEP/Data/: LHCO.hs
src/HEP/Data/LHCO/: Parser.hs  PipesUtil.hs  Type.hs
test/: conduitparse.hs  parsetest.hs  pipesparse.hs  testparse.hs
