name:                lhco-tools
version:             0.0.0.0
synopsis:            Tools for the LHC Olympics (LHCO) data analyses using Haskell
description:         This package provides simple parsers and functions for manipulating files in the LHC Olympics Form (LHCO).
homepage:            https://github.com/cbpark/lhco-tools
license:             BSD3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          cbpark@gmail.com
copyright:           (c) 2014 Chan Beom Park
category:            Data, Physics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     HEP.Data.LHCO
                       HEP.Data.LHCO.Parser
                       HEP.Data.LHCO.Type
  build-depends:       base >=4.6
                     , attoparsec >=0.10
                     , transformers >=0.3 && <0.5
                     , hep-vector >=0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields -fno-warn-unused-do-bind

executable lhco_parse_test
  main-is:             testparse.hs
  build-depends:       base >=4.6
                     , attoparsec >=0.10
                     , bytestring >=0.10
                     , lhco-tools
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields

executable lhco_conduitparse_test
  main-is:             conduitparse.hs
  build-depends:       base >=4.6
                     , conduit >=1.2
                     , conduit-extra >=1.1
                     , resourcet >=1.1
                     , transformers >=0.3 && <0.5
                     , lhco-tools
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields

executable lhco_pipesparse_test
  main-is:             pipesparse.hs
  build-depends:       base >=4.6
                     , bytestring >=0.10
                     , pipes >=4.1
                     , pipes-attoparsec >=0.5
                     , pipes-bytestring >=2.1
                     , transformers >=0.3 && <0.5
                     , lhco-tools
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields